package it.diem.unisa.musicmanager.model;

/**
 * Enumerazione che rappresenta il tipo di elemento della coda.
 * Può essere una traccia o una playlist.
 */
public enum QueueItemType {
    TRACK, PLAYLIST
}
