package it.diem.unisa.musicmanager.model;

public enum Tag {
    FAVOURITE,
    EXPLICIT,
    NEWRELEASE
}
